# SpawnStar

./: .gitignore  CMakeLists.txt  README.md  ToDo.md
src/: button.cpp  button.hpp  convert.cpp  convert.hpp  globalVariables.hpp  main.cpp  random.cpp  random.h  random.hpp  star.cpp  star.h  star.hpp
